# redis-event-stream-module

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  SECURITY.md  SPEC.md  book.toml  demo-preflight.sh  demo.sh  deny.toml  ramp.yml  release-plz.toml
.github/: dependabot.yml  release-install-notes.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  decision.yml  feature_request.yml
.github/workflows/: bench.yml  chaos.yml  ci.yml  docs.yml  fuzz.yml  release-artifacts.yml  release-plz.yml  release.yml  security.yml
bench/: gate.sh  run.sh
chaos/: README.md  run.sh
contrib/monitoring/: README.md  docker-compose.yml
contrib/monitoring/exporter/: eventstream-textfile.sh
contrib/monitoring/grafana/: eventstream-dashboard.json
contrib/monitoring/grafana/provisioning/dashboards/: eventstream.yml
contrib/monitoring/prometheus/: eventstream.rules.yml  prometheus.yml
crates/eventstream-client/: Cargo.toml
crates/eventstream-client/examples/: eventstream_web.html  eventstream_web.rs
crates/eventstream-client/src/: lib.rs  main.rs
docs/: SUMMARY.md  benchmarks.md  changelog.md  cluster-consumers.md  cluster-design-history.md  cluster-design.md  cluster-support.md  commands.md  configuration.md  consumer-patterns.md  counters.md  demo.md  docker.md  enterprise.md  entry-shapes.md  example-client.md  gap-markers.md  introduction.md  loss-windows.md  monitoring.md  preflight.md  quickstart.md  security.md  sizing.md  specification.md  upgrading.md  web-demo.md  work-queues.md
examples/: eventstream_client.rs  notifytest.rs
examples/go/: README.md  consumer.go  go.mod
examples/node/: README.md  consumer.js  package.json
examples/python/: README.md  consumer.py
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: glob_match.rs  parse_filter.rs  sanitize.rs  validate_prefix.rs
src/: capture.rs  cluster.rs  commands.rs  config.rs  lib.rs  markers.rs  stats.rs
tests/: acl.rs  auto_group.rs  capture.rs  cluster.rs  commands.rs  entry_format.rs  event_classes.rs  filters.rs  firehose.rs  hash_field_expiry.rs  markers.rs  module_events.rs  observability.rs  replication.rs  retention.rs  upgrade.rs  version_gate.rs
tests/common/: mod.rs
