[package]
name = "redis-event-stream-module"
version = "0.2.0"
edition = "2021"
description = "Redis module that mirrors keyspace notifications into per-event Redis Streams for durable, replayable event consumption."
repository = "https://github.com/joshrotenberg/redis-event-stream-module"
license = "MIT OR Apache-2.0"
keywords = ["redis", "valkey", "module", "streams", "keyspace-notifications"]
categories = ["database"]
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# crates.io releases of redis-module lag the repo badly; Redis's own modules
# (e.g. RedisJSON) consume the git v2.1.x tags instead. Match RedisJSON's pin
# shape, with the 7.2 compatibility floor from SPEC.md section 14.
redis-module = { git = "https://github.com/RedisLabsModules/redismodule-rs", tag = "v2.1.3", default-features = false, features = [
    "min-redis-compatibility-version-7-2",
] }
redis-module-macros = { git = "https://github.com/RedisLabsModules/redismodule-rs", tag = "v2.1.3" }
# The info_command_handler attribute expands to linkme::distributed_slice in
# this crate's namespace, so linkme must be a direct dependency (same major
# as the wrapper's).
linkme = "0.3"
lazy_static = "1"

[dev-dependencies]
# Property tests over the filter grammar and event-name sanitizer (issue #94).
# No default features: fork/timeout process isolation buys nothing for pure
# in-process functions and would drag in extra dependencies.
proptest = { version = "1", default-features = false, features = ["std"] }
redis-server-wrapper = { version = "0.4.3", default-features = false, features = [
    "blocking",
] }
redis = { version = "1.3", features = ["cluster"] }
tempfile = "3"

[profile.release]
lto = true
