# Workspace: the cdylib module crate (this root package) plus the shipped
# consumer client (crates/eventstream-client, issue #82). The module crate stays
# publish = false with its git-pinned redis-module dependency; the client crate
# has no such constraint and is independently publishable. CI runs at the repo
# root (cargo fmt --all / clippy --all-targets / test --lib / build --release),
# which now spans both members — intentional, so the client is linted and tested
# on the same legs. The release-artifacts workflow selects the module package by
# name for the .so/.dylib and builds the client binary alongside it.
[workspace]
members = ["crates/eventstream-client"]
# The cargo-fuzz crate (issue #131) is its own detached workspace: it needs
# nightly + libFuzzer and links this crate as an rlib, so it must stay out of
# the stable root workspace that CI builds/lints/tests.
exclude = ["fuzz"]
# Both members are default, so a bare root command (cargo build/clippy/test)
# spans the module (".") and the client. Without this, a root package that is
# also the workspace root makes cargo default to the root package alone, which
# would leave the client binary unbuilt for chaos/run.sh and unlinted/untested
# in CI. release-artifacts and the Dockerfile scope their module-only builds
# with `-p redis-event-stream-module` where they must not pull in the client.
default-members = [".", "crates/eventstream-client"]
resolver = "2"

[package]
name = "redis-event-stream-module"
version = "0.3.0"
edition = "2021"
# MSRV is the floor of the resolved build graph, not a taste choice: the
# git-pinned redis-module v2.1.3 drags in bindgen -> which -> home 0.5.12
# (rust-version 1.88) as a build dependency, and the redis 1.3 test client
# (dev-dependency) is also 1.88, so nothing older compiles this lockfile.
# Gated by the msrv leg in .github/workflows/ci.yml; a dep bump that raises
# the floor fails there loudly and is resolved by a deliberate bump commit.
# Edition stays 2021 on purpose (see SPEC.md section 14, Toolchain).
rust-version = "1.88"
description = "Redis module that mirrors keyspace notifications into per-event Redis Streams for durable, replayable event consumption."
repository = "https://github.com/joshrotenberg/redis-event-stream-module"
license = "MIT OR Apache-2.0"
keywords = ["redis", "valkey", "module", "streams", "keyspace-notifications"]
categories = ["database"]
publish = false

[lib]
# `cdylib` is the shipped module artifact; `rlib` is added so the cargo-fuzz
# crate (issue #131) can link the library and reach the pure parser/sanitizer
# functions. Adding `rlib` weakens LTO for the `cdylib` at the default 16
# codegen units (it grew the shipped `.so` ~20%); `codegen-units = 1` in
# `[profile.release]` below offsets that, leaving the shipped artifact slightly
# smaller than before. See the profile note.
crate-type = ["cdylib", "rlib"]

# Companion test module (issue #91): a second cdylib the integration suite
# loads next to the main module to fire RM_NotifyKeyspaceEvent with arbitrary
# event-name bytes (tests/module_events.rs). An example, not a workspace
# member, so it shares this crate's lockfile and dependency cache.
[[example]]
name = "notifytest"
crate-type = ["cdylib"]

# Enabled only by the cargo-fuzz crate (issue #131): compiles the `pub`
# `fuzz_targets` module that exposes thin wrappers over the internal parser and
# sanitizer functions. Off by default, so the shipped cdylib is unchanged.
[features]
fuzzing = []

[dependencies]
# crates.io releases of redis-module lag the repo badly; Redis's own modules
# (e.g. RedisJSON) consume the git v2.1.x tags instead. Match RedisJSON's pin
# shape, with the 7.2 compatibility floor from SPEC.md section 14.
redis-module = { git = "https://github.com/RedisLabsModules/redismodule-rs", tag = "v2.1.3", default-features = false, features = [
    "min-redis-compatibility-version-7-2",
] }
redis-module-macros = { git = "https://github.com/RedisLabsModules/redismodule-rs", tag = "v2.1.3" }
# The info_command_handler attribute expands to linkme::distributed_slice in
# this crate's namespace, so linkme must be a direct dependency (same major
# as the wrapper's).
linkme = "0.3"
lazy_static = "1"

[dev-dependencies]
# Property tests over the filter grammar and event-name sanitizer (issue #94).
# No default features: fork/timeout process isolation buys nothing for pure
# in-process functions and would drag in extra dependencies.
proptest = { version = "1", default-features = false, features = ["std"] }
redis-server-wrapper = { version = "0.4.3", default-features = false, features = [
    "blocking",
] }
redis = { version = "1.3", features = ["cluster"] }
tempfile = "3"
# The consumer library, exercised end to end against the live TestCluster
# harness (issue #215): the cluster discovery/gap-marker path can only be
# validated against a real 3-master cluster the unit tests cannot spin up.
eventstream-client = { path = "crates/eventstream-client" }

[profile.release]
lto = true
# A single codegen unit lets fat LTO fold the whole crate. It also neutralizes
# the size cost of the `rlib` output added for cargo-fuzz (issue #131): building
# `cdylib` + `rlib` together weakens per-unit LTO with the default 16 units and
# grew the shipped `.so` ~20%, but at `codegen-units = 1` that penalty drops to
# ~3% and the shipped artifact is in fact smaller than it was before (LTO now
# folds more). The trade is a slower release build, acceptable for a shipped
# module. See the `[lib]` note above.
codegen-units = 1
